[package]
name = "reth-proof-rh"
version = "0.1.0"
edition = "2021"

[dependencies]
reth = { git = "https://github.com/sp1-patches/reth-new", branch = "uma/new-main" }
reth-db = { git = "https://github.com/sp1-patches/reth-new", branch = "uma/new-main" }
reth-interfaces = { git = "https://github.com/sp1-patches/reth-new", branch = "uma/new-main" }
reth-libmdbx = { git = "https://github.com/sp1-patches/reth-new", branch = "uma/new-main" }
reth-payload-builder = { git = "https://github.com/sp1-patches/reth-new", branch = "uma/new-main" }
reth-node-api = { git = "https://github.com/sp1-patches/reth-new", branch = "uma/new-main" }
reth-trie = { git = "https://github.com/sp1-patches/reth-new", branch = "uma/new-main" }
reth-trie-parallel = { git = "https://github.com/sp1-patches/reth-new", branch = "uma/new-main" }
reth-basic-payload-builder = { git = "https://github.com/sp1-patches/reth-new", branch = "uma/new-main" }

alloy-primitives = "0.7.2"
alloy-rlp = "0.3.4"
eyre = "0.6.12"
serde = "1.0.203"

revm = { version = "8.0.0", features = ["std", "secp256k1", "optional_balance_check"], default-features = false }
revm-primitives = { version = "3.1.0", features = ["std", ], default-features = false }
revm-inspectors = { git = "https://github.com/paradigmxyz/evm-inspectors", rev = "dc614ee" }
lazy_static = "1.4.0"
futures = "0.3.30"
serde_json = "1.0.117"
