[package]
name = "reth-proof-rh"
version = "0.1.0"
edition = "2021"

[dependencies]
reth = { git = "https://github.com/sp1-patches/reth-new", branch = "uma/new-main" }
reth-trie = { git = "https://github.com/sp1-patches/reth-new", branch = "uma/new-main" }

alloy-primitives = "0.7.2"
alloy-rlp = "0.3.4"
eyre = "0.6.12"

[dev-dependencies]
serde = "1.0.203"
serde_json = "1.0.117"
reth-db = { git = "https://github.com/sp1-patches/reth-new", branch = "uma/new-main" }
